--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-scroll-progress": "^0.1.0",
     "swiper": "^11.1.12",
     "tailwindcss": "^3.4.10",
     "web-vitals": "^2.1.4"
