--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "react-scroll-progress": "^0.1.0",
     "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.12",
     "tailwindcss": "^3.4.10",
     "web-vitals": "^2.1.4"
